--- a/projects.html
+++ b/projects.html
@@ -30,41 +30,41 @@
             <!-- Project 1 -->
             <div class="project-card">
                 <a href="project1.html">
-                    <img src="https://via.placeholder.com/400" alt="Project 1">
-                    <h3>Project 1</h3>
-                    <p>Description of Project 1.</p>
+                    <img src="https://images.pexels.com/photos/7943257/pexels-photo-7943257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img1">
+                    <h3>Memory matching game</h3>
+                    <p>A fun interactive card-flipping game built with HTML, CSS, and JavaScript.</p>
                 </a>
             </div>
             <!-- Project 2 -->
             <div class="project-card">
                 <a href="project2.html">
-                    <img src="https://via.placeholder.com/400" alt="Project 2">
-                    <h3>Project 2</h3>
-                    <p>Description of Project 2.</p>
+                    <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img2">
+                    <h3>Text-Based Adventure Game</h3>
+                    <p>A branching storyline game in C++ where players make choices that lead to different outcomes.</p>
                 </a>
             </div>
             <!-- Project 3 -->
             <div class="project-card">
                 <a href="project3.html">
-                    <img src="https://via.placeholder.com/400" alt="Project 3">
-                    <h3>Project 3</h3>
-                    <p>Description of Project 3.</p>
+                    <img src="https://images.pexels.com/photos/8789747/pexels-photo-8789747.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img3">
+                    <h3>Rock, Paper, Scissors</h3>
+                    <p>A Python-based game where users play against a computer opponent with randomized moves.</p>
                 </a>
             </div>
             <!-- Project 4 -->
             <div class="project-card">
                 <a href="project4.html">
-                    <img src="https://via.placeholder.com/400" alt="Project 4">
-                    <h3>Project 4</h3>
-                    <p>Description of Project 4.</p>
+                    <img src="https://images.pexels.com/photos/1314536/pexels-photo-1314536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img4">
+                    <h3>Number Guessing Game</h3>
+                    <p>A simple C++ game where players try to guess the randomly generated number with hints.</p>
                 </a>
             </div>
             <!-- Project 5 -->
             <div class="project-card">
                 <a href="project5.html">
-                    <img src="https://via.placeholder.com/400" alt="Project 5">
-                    <h3>Project 5</h3>
-                    <p>Description of Project 5.</p>
+                    <img src="https://images.pexels.com/photos/8850706/pexels-photo-8850706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img5">
+                    <h3>To-Do List App</h3>
+                    <p>A basic Python program that allows users to add, remove, and manage tasks efficiently.</p>
                 </a>
             </div>
         </div>
