--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Home Section -->
     <section id="home">
         <h2>A Word Of Tech</h2>
-        <p>Writing effective documentation for efficient code.</p>
+        <p>Writing effective documentation for efficient communication.</p>
         <a href="contact.html" class="btn">Get in touch</a>
     </section>
 
