--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                 <a href="project1.html">
                     <img src="https://images.pexels.com/photos/7943257/pexels-photo-7943257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img1">
                     <h3>Memory matching game</h3>
-                    <p>A fun interactive card-flipping game built with HTML, CSS, and JavaScript.</p>
+                    <p>A fun interactive card-flipping game.</p>
                 </a>
             </div>
             <!-- Project 2 -->
@@ -40,7 +40,7 @@
                 <a href="project2.html">
                     <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img2">
                     <h3>Text-Based Adventure Game</h3>
-                    <p>A branching storyline game in C++ where players make choices that lead to different outcomes.</p>
+                    <p>A branching storyline game where choices lead to different outcomes.</p>
                 </a>
             </div>
             <!-- Project 3 -->
@@ -48,7 +48,7 @@
                 <a href="project3.html">
                     <img src="https://images.pexels.com/photos/8789747/pexels-photo-8789747.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img3">
                     <h3>Rock, Paper, Scissors</h3>
-                    <p>A Python-based game where users play against a computer opponent with randomized moves.</p>
+                    <p>The python version!</p>
                 </a>
             </div>
             <!-- Project 4 -->
@@ -56,7 +56,7 @@
                 <a href="project4.html">
                     <img src="https://images.pexels.com/photos/1314536/pexels-photo-1314536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img4">
                     <h3>Number Guessing Game</h3>
-                    <p>A simple C++ game where players try to guess the randomly generated number with hints.</p>
+                    <p>Guess the number with hints included.</p>
                 </a>
             </div>
             <!-- Project 5 -->
