--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
                 <a href="project2.html">
                     <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img2">
                     <h3>Text-Based Adventure Game</h3>
-                    <p>A branching storyline game where choices lead to different outcomes.</p>
+                    <p>Every choice makes a difference.</p>
                 </a>
             </div>
             <!-- Project 3 -->
@@ -64,7 +64,7 @@
                 <a href="project5.html">
                     <img src="https://images.pexels.com/photos/8850706/pexels-photo-8850706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img5">
                     <h3>To-Do List App</h3>
-                    <p>A basic Python program that allows users to add, remove, and manage tasks efficiently.</p>
+                    <p>Manage your tasks efficiently.</p>
                 </a>
             </div>
         </div>
