--- a/about.html
+++ b/about.html
@@ -29,8 +29,35 @@
             <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
             <div class="about-text">
                 <h1>About me</h1>
-                <p>I'm a passionate writer that enjoys crafting documentation for people to learn from. I take all the technical details and streamline it for a person to read and interact with.</p>
+                <p>I'm a passionate writer that enjoys crafting documentation for people to learn from. I take technical information and transform it for a person to read and interact with.</p>
                 <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new or visiting a new place.</p>
+
+                <h3>Core Skills</h3>
+                <ul>
+                <li>Writing: Feature articles, UI copy, product releases and FAQs</li>
+                <li>Editing & Proofreading</li>
+                <li>Photo & Video Editing with Camtasia, Photoshop, Canva and Screenpresso</li>
+                <li>Basic Coding: HTML, CSS, JavaScript and C++</li>
+                <li>Markdown</li>
+                <li>CMS with Document 360</li>
+                </ul>
+
+                <h3>Tools & Technologies</h3>
+                <ul>
+                <li>Document360 and Markdown</li>
+                <li>Photoshop, Camtasia, Canva and Figma</li>
+                <li>Google Suite, Microsoft Office, Airtable, Monday and Basecamp</li>
+                </ul>
+
+                <h3>Experience Highlights</h3>
+                <ul>
+                <li>Technical writing: 1+ years.</li>
+                <li>Writing: 4 years.</li>                    
+                <li>Produced well-researched feature articles and product releases.</li>
+                <li>Edited and proofread content for clarity and accuracy.</li>
+                <li>Worked with multimedia tools to enhance visual storytelling.</li>
+                </ul>
+                
                 <a href="contact.html" class="btn">Get in touch</a>
             </div>
         </div>
