--- a/about.html
+++ b/about.html
@@ -23,41 +23,46 @@
         </nav>
     </header>
 
-    <!-- About Section -->
-    <section id="about">
-        <div class="about-container">
-            <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
-            <div class="about-text">
-                <h1>About me</h1>
-                <p>I'm a passionate writer that enjoys crafting documentation for people to learn from. I take technical information and transform it for a person to read and interact with.</p>
-                <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new or visiting a new place.</p>
+   <!-- About Section -->
+<section id="about">
+    <div class="about-container">
+        <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
+        <div class="about-text">
+            <h1>About Me</h1>
+            <p>I'm a passionate writer who enjoys crafting documentation that helps people learn. I take technical information and transform it into content that is easy to read and interact with.</p>
+            <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new, or visiting a new place.</p>
 
-                <h3>Core Skills</h3>
-                <div class="skills">
-                <span>Writing (Feature Articles, Product Releases, FAQs)</span>
-                <span>Editing & Proofreading</span>
-                <span>Photo Editing & Video Editing</span>
-                <span>Basic Coding & Markdown Documentation</span>
-                </div>
+            <h3>Core Skills</h3>
+            <div class="skills">
+                <p>Writing (Feature Articles, Product Releases, FAQs)</p>
+                <p>Editing & Proofreading</p>
+                <p>Photo Editing & Video Editing</p>
+                <p>Basic Coding & Markdown Documentation</p>
+            </div>
 
-                <h3>Tools & Technologies</h3>
-                <div class="tools">
-                <span>Google Docs, Document360, Markdown</span>
-                <span>Photoshop, Canva, Figma</span>
-                <span>Camtasia, Airtable, Monday, Basecamp</span>
-                </div>
+            <h3>Tools & Technologies</h3>
+            <div class="tools">
+                <p>Google Docs, Document360, Markdown</p>
+                <p>Photoshop, Canva, Figma</p>
+                <p>Camtasia, Airtable, Monday, Basecamp</p>
+            </div>
 
-                <h3>Experience Highlights</h3>
-                <div class="skills">
-                <span>Produced well-researched feature articles and product releases.</span>
-                <span>Edited and proofread content for clarity and accuracy.</span>
-                <span>Worked with multimedia tools to enhance visual storytelling.</span>
-                </div>
-        
-                <a href="contact.html" class="btn">Get in touch</a>
+            <h3>Experience Highlights</h3>
+            <div class="experience">
+                <p>Produced well-researched feature articles and product releases.</p>
+                <p>Edited and proofread content for clarity and accuracy.</p>
+                <p>Worked with multimedia tools to enhance visual storytelling.</p>
+            </div>
+
+            <h3>Let's Connect</h3>
+            <p class="connect-text">Passionate about content creation and digital media—always open to new projects and collaborations.</p>
+            
+            <div class="cta-container">
+                <a href="contact.html" class="btn">Get in Touch</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Footer -->
     <footer>
