--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Projects">
-    <title>My projects</title>
+    <meta name="description" content="My Projects - ZB Portfolio">
+    <title>My Projects | ZB Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <header>
-        <nav>
+        <nav aria-label="Main navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -25,20 +25,20 @@
 
     <!-- Projects Section -->
     <section id="projects">
-        <h2>My projects</h2>
+        <h2>My Projects</h2>
         <div class="projects-grid">
             <!-- Project 1 -->
             <div class="project-card">
                 <a href="project1.html">
-                    <img src="https://images.pexels.com/photos/7943257/pexels-photo-7943257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img1">
-                    <h3>Memory matching game</h3>
+                    <img src="https://images.pexels.com/photos/7943257/pexels-photo-7943257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Memory matching game">
+                    <h3>Memory Matching Game</h3>
                     <p>A fun interactive card-flipping game.</p>
                 </a>
             </div>
             <!-- Project 2 -->
             <div class="project-card">
                 <a href="project2.html">
-                    <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img2">
+                    <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Text-Based Adventure Game">
                     <h3>Text-Based Adventure Game</h3>
                     <p>Every choice makes a difference.</p>
                 </a>
@@ -46,7 +46,7 @@
             <!-- Project 3 -->
             <div class="project-card">
                 <a href="project3.html">
-                    <img src="https://images.pexels.com/photos/8789747/pexels-photo-8789747.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img3">
+                    <img src="https://images.pexels.com/photos/8789747/pexels-photo-8789747.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Rock, Paper, Scissors">
                     <h3>Rock, Paper, Scissors</h3>
                     <p>The python version!</p>
                 </a>
@@ -54,7 +54,7 @@
             <!-- Project 4 -->
             <div class="project-card">
                 <a href="project4.html">
-                    <img src="https://images.pexels.com/photos/1314536/pexels-photo-1314536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img4">
+                    <img src="https://images.pexels.com/photos/1314536/pexels-photo-1314536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Number Guessing Game">
                     <h3>Number Guessing Game</h3>
                     <p>Guess the number with hints included.</p>
                 </a>
@@ -62,7 +62,7 @@
             <!-- Project 5 -->
             <div class="project-card">
                 <a href="project5.html">
-                    <img src="https://images.pexels.com/photos/8850706/pexels-photo-8850706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img5">
+                    <img src="https://images.pexels.com/photos/8850706/pexels-photo-8850706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="To-Do List App">
                     <h3>To-Do List App</h3>
                     <p>Manage your tasks efficiently.</p>
                 </a>
