--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="ZB - About Me">
-    <title>About Me | ZB Portfolio</title>
+    <meta name="description" content="Welcome to my portfolio. I specialize in writing documentation for efficient communication.">
+    <title>Home | ZB Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -23,43 +23,17 @@
         </nav>
     </header>
 
-    <!-- About Section -->
-    <section id="about">
-        <div class="about-container">
-            <img src="https://via.placeholder.com/200" alt="Your photo" class="about-photo">
-            <div class="about-text">
-                <h1>About Me</h1>
-                <p>I'm a passionate writer who enjoys crafting documentation that helps people learn. I take technical information and transform it into content that is easy to read and interact with.</p>
-                <p>When I'm not working, you'll find me reading web novels, sketching buildings, learning something new, or visiting a new place.</p>
+    <!-- Home Section -->
+    <section id="home">
+        <h2>A Word Of Tech</h2>
+        <p>Writing effective documentation for efficient communication.</p>
+        <a href="contact.html" class="btn">Get in touch</a>
+    </section>
 
-                <h3>Core Skills</h3>
-                <div class="skills">
-                    <p>Writing (Feature Articles, Product Releases, FAQs)</p>
-                    <p>Editing & Proofreading</p>
-                    <p>Photo Editing & Video Editing</p>
-                    <p>Basic Coding & Markdown Documentation</p>
-                </div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 ZB. All rights reserved.</p>
+    </footer>
 
-                <h3>Tools & Technologies</h3>
-                <div class="tools">
-                    <p>Google Docs, Document360, Markdown</p>
-                    <p>Photoshop, Canva, Figma</p>
-                    <p>Camtasia, Airtable, Monday, Basecamp</p>
-                </div>
-
-                <h3>Experience Highlights</h3>
-                <div class="experience">
-                    <p>Produced well-researched feature articles and product releases.</p>
-                    <p>Edited and proofread content for clarity and accuracy.</p>
-                    <p>Worked with multimedia tools to enhance visual storytelling.</p>
-                </div>
-
-                <h3>Let's Connect</h3>
-                <p class="connect-text">Passionate about content creation and digital media—always open to new projects and collaborations.</p>
-
-                <div class="cta-container">
-                    <a href="contact.html" class="btn">Get in Touch</a>
-                </div>
-            </div>
-        </div>
-    </section
+</body>
+</html>
