--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <meta name="description" content="ZB - About Me">
     <title>About me</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" id="stylesheet">
+    <script src="scripts.js" id="script"></script>
 </head>
 <body>
 
