--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="Welcome to my portfolio. I specialize in writing documentation for efficient communication.">
     <title>Home | ZB Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" id="stylesheet">
+    <script src="scripts.js" id="script"></script>
 </head>
 <body>
 
