--- a/writing.html
+++ b/writing.html
@@ -76,5 +76,8 @@
         <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
+    <!-- JavaScript file reference should be placed just before the closing </body> -->
+    <script src="scripts.js"></script>
+    
 </body>
 </html>
