--- a/writing4.html
+++ b/writing4.html
@@ -37,6 +37,9 @@
         <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
 
+    <!-- JavaScript file reference should be placed just before the closing </body> -->
+    <script src="scripts.js"></script>
+    
 </body>
 </html>
 
