--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" id="stylesheet">
 </head>
-<body>
+<body id="homepage">
 
     <!-- Header -->
     <header>
