--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to my portfolio. I specialize in writing documentation for efficient communication.">
-    <title>Home | ZB Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" id="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Welcome to my portfolio. I specialize in writing documentation for efficient communication.">
+  <title>Home | ZB Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" id="stylesheet">
 </head>
 <body id="homepage">
-
-    <!-- Header -->
-    <header>
+  <div class="main-wrapper">
+    <div class="content">
+      <!-- Header -->
+      <header>
         <nav aria-label="Main navigation">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writings</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="writing.html">Writings</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
 
-    <!-- Home Section -->
-    <section id="home">
+      <!-- Home Section -->
+      <section id="home">
         <h2>A Word Of Tech</h2>
         <p>Writing effective documentation for efficient communication.</p>
         <a href="contact.html" class="btn">Get in touch</a>
-    </section>
+      </section>
+    </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 ZB. All rights reserved.</p>
+      <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
+  </div>
 
-    <!-- JavaScript file reference should be placed just before the closing </body> -->
-    <script src="scripts.js"></script>
-    
+  <script src="scripts.js"></script>
 </body>
 </html>
