--- a/projects.html
+++ b/projects.html
@@ -1,82 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Projects - ZB Portfolio">
-    <title>My Projects | ZB Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" id="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="My Projects - ZB Portfolio" />
+  <title>My Projects | ZB Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" id="stylesheet" />
 </head>
 <body>
-
-    <!-- Header -->
-    <header>
+  <div class="main-wrapper">
+    <div class="content">
+      <!-- Header -->
+      <header>
         <nav aria-label="Main navigation">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="writing.html">Writings</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="writing.html">Writings</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
 
-    <!-- Projects Section -->
-    <section id="projects">
+      <!-- Projects Section -->
+      <section id="projects">
         <h2>My Projects</h2>
         <div class="projects-grid">
-            <!-- Project 1 -->
-            <div class="project-card">
-                <a href="project1.html">
-                    <img src="https://images.pexels.com/photos/7943257/pexels-photo-7943257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Memory matching game">
-                    <h3>Memory Matching Game</h3>
-                    <p>A fun interactive card-flipping game.</p>
-                </a>
-            </div>
-            <!-- Project 2 -->
-            <div class="project-card">
-                <a href="project2.html">
-                    <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Text-Based Adventure Game">
-                    <h3>Text-Based Adventure Game</h3>
-                    <p>Every choice makes a difference.</p>
-                </a>
-            </div>
-            <!-- Project 3 -->
-            <div class="project-card">
-                <a href="project3.html">
-                    <img src="https://images.pexels.com/photos/8789747/pexels-photo-8789747.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Rock, Paper, Scissors">
-                    <h3>Rock, Paper, Scissors</h3>
-                    <p>The python version!</p>
-                </a>
-            </div>
-            <!-- Project 4 -->
-            <div class="project-card">
-                <a href="project4.html">
-                    <img src="https://images.pexels.com/photos/1314536/pexels-photo-1314536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Number Guessing Game">
-                    <h3>Number Guessing Game</h3>
-                    <p>Guess the number with hints included.</p>
-                </a>
-            </div>
-            <!-- Project 5 -->
-            <div class="project-card">
-                <a href="project5.html">
-                    <img src="https://images.pexels.com/photos/8850706/pexels-photo-8850706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="To-Do List App">
-                    <h3>To-Do List App</h3>
-                    <p>Manage your tasks efficiently.</p>
-                </a>
-            </div>
+          <!-- Project 1 -->
+          <div class="project-card">
+            <a href="project1.html">
+              <img src="https://images.pexels.com/photos/7943257/pexels-photo-7943257.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Memory matching game" />
+              <h3>Memory Matching Game</h3>
+              <p>A fun interactive card-flipping game.</p>
+            </a>
+          </div>
+          <!-- Project 2 -->
+          <div class="project-card">
+            <a href="project2.html">
+              <img src="https://images.pexels.com/photos/239329/pexels-photo-239329.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Text-Based Adventure Game" />
+              <h3>Text-Based Adventure Game</h3>
+              <p>Every choice makes a difference.</p>
+            </a>
+          </div>
+          <!-- Project 3 -->
+          <div class="project-card">
+            <a href="project3.html">
+              <img src="https://images.pexels.com/photos/8789747/pexels-photo-8789747.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Rock, Paper, Scissors" />
+              <h3>Rock, Paper, Scissors</h3>
+              <p>The python version!</p>
+            </a>
+          </div>
+          <!-- Project 4 -->
+          <div class="project-card">
+            <a href="project4.html">
+              <img src="https://images.pexels.com/photos/1314536/pexels-photo-1314536.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Number Guessing Game" />
+              <h3>Number Guessing Game</h3>
+              <p>Guess the number with hints included.</p>
+            </a>
+          </div>
+          <!-- Project 5 -->
+          <div class="project-card">
+            <a href="project5.html">
+              <img src="https://images.pexels.com/photos/8850706/pexels-photo-8850706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="To-Do List App" />
+              <h3>To-Do List App</h3>
+              <p>Manage your tasks efficiently.</p>
+            </a>
+          </div>
         </div>
-    </section>
+      </section>
+    </div>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 ZB. All rights reserved.</p>
+      <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
+  </div>
 
-    <!-- JavaScript file reference should be placed just before the closing </body> -->
-    <script src="scripts.js"></script>
-    
+  <script src="scripts.js"></script>
 </body>
 </html>
