--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
     <!-- Contact Section -->
     <section id="contact">
-        <div class="contact-content">
+        <div class="content-container"> <!-- Added div wrapper like in other pages -->
             <h2>Contact Me</h2>
             <p>If you'd like to collaborate, discuss a project, or just say hello, feel free to reach out!</p>
 
@@ -41,7 +41,7 @@
 
                 <button type="submit">Send Message</button>
             </form>
-        </div>
+        </div> <!-- Closing div -->
     </section>
 
     <!-- Footer -->
