--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@
   <link rel="stylesheet" href="styles.css" id="stylesheet">
 </head>
 <body id="homepage">
-  <div class="main-wrapper">
-    <div class="content">
-      <!-- Header -->
-      <header>
-        <nav aria-label="Main navigation">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="writing.html">Writings</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
+  <div class="wrapper"> <!-- renamed from main-wrapper to match CSS -->
+    
+    <!-- Header -->
+    <header>
+      <nav aria-label="Main navigation">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="writing.html">Writings</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <!-- Home Section -->
+    <!-- Main content -->
+    <main>
       <section id="home">
         <h2>A Word Of Tech</h2>
         <p>Writing effective documentation for efficient communication.</p>
         <a href="contact.html" class="btn">Get in touch</a>
       </section>
-    </div>
+    </main>
 
     <!-- Footer -->
     <footer>
       <p>&copy; 2025 ZB. All rights reserved.</p>
     </footer>
+
   </div>
 
   <script src="scripts.js"></script>
